@@ -1,3 +1,9 @@
+bubba-frontend (2.1.45) vincent hugo; urgency=low
+
+  * Inline text field and updated text
+
+ -- Carl Fürstenberg <carl@excito.com>  Wed, 08 Jun 2011 12:46:58 +0200
+
 bubba-frontend (2.1.44) vincent hugo; urgency=low
 
   * Adding missing slash in default lange loading
